WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268490
[WGSL] Compiler passes have incorrect scoping
https://bugs.webkit.org/show_bug.cgi?id=268490
Summary
[WGSL] Compiler passes have incorrect scoping
Tadeu Zagallo
Reported
2024-01-31 12:06:49 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-01-31 12:07:16 PST
<
rdar://problem/121527200
>
Tadeu Zagallo
Comment 2
2024-01-31 12:10:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23609
EWS
Comment 3
2024-02-02 08:39:24 PST
Committed
273993@main
(a8e15be46cf7): <
https://commits.webkit.org/273993@main
> Reviewed commits have been landed. Closing PR #23609 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug