[WGSL] Compiler passes have incorrect scoping https://bugs.webkit.org/show_bug.cgi?id=268490 rdar://121527200

Reviewed by Mike Wyrzykowski.

Not all classes that relied on the ContextProvider to track values while visiting
the AST provided overrides for all the nodes that had introduce a scope. That
resulted in incorrect scope tracking (e.g. the variables introduced in a for loop
might leak or similar). Move some of that logic into a new helper class, ScopedVisitor,
and updated all the subclasses of ContextProvider to use it instead of the base Visitor.

* Source/WebGPU/WGSL/AST/ASTScopedVisitor.h: Added.
* Source/WebGPU/WGSL/AST/ASTScopedVisitorInlines.h: Added.
(WGSL::AST::ScopedVisitor<T>::visit):
* Source/WebGPU/WGSL/AST/ASTVisitor.cpp:
(WGSL::AST::Visitor::visit):
* Source/WebGPU/WGSL/GlobalSorting.cpp:
(WGSL::GraphBuilder::GraphBuilder::visit):
(WGSL::GraphBuilder::visit): Deleted.
(WGSL::GraphBuilder::GraphBuilder): Deleted.
(WGSL::GraphBuilder::introduceVariable): Deleted.
(WGSL::GraphBuilder::readVariable const): Deleted.
(WGSL::reorder): Deleted.
(WGSL::reorderGlobals): Deleted.
* Source/WebGPU/WGSL/MangleNames.cpp:
(WGSL::NameManglerVisitor::run):
(WGSL::NameManglerVisitor::visit):
(WGSL::NameManglerVisitor::visitVariableDeclaration):
* Source/WebGPU/WGSL/PointerRewriter.cpp:
(WGSL::PointerRewriter::PointerRewriter):
(WGSL::PointerRewriter::run):
(WGSL::PointerRewriter::rewrite):
(WGSL::PointerRewriter::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::bindingKindToString):
(WGSL::TypeChecker::check):
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::visitAttributes):
(WGSL::TypeChecker::infer):
(WGSL::TypeChecker::resolve):
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/273993@main