Source/WebGPU/WGSL/PointerRewriter.cpp
@@ -27,7 +27,7 @@
 #include "PointerRewriter.h"
 
 #include "AST.h"
-#include "ASTVisitor.h"
+#include "ASTScopedVisitorInlines.h"
 #include "CallGraph.h"
 #include "ContextProviderInlines.h"
 #include "WGSL.h"
@@ -36,10 +36,13 @@
 
 namespace WGSL {
 
-class PointerRewriter : public AST::Visitor, public ContextProvider<AST::Expression*> {
+class PointerRewriter : AST::ScopedVisitor<AST::Expression*> {
+    using Base = AST::ScopedVisitor<AST::Expression*>;
+    using Base::visit;
+
 public:
     PointerRewriter(CallGraph& callGraph)
-        : AST::Visitor()
+        : Base()
         , m_callGraph(callGraph)
     {
     }
@@ -47,13 +50,15 @@ public:
     void run();
 
     void visit(AST::CompoundStatement&) override;
-    void visit(AST::ForStatement&) override;
     void visit(AST::VariableStatement&) override;
     void visit(AST::PhonyAssignmentStatement&) override;
+    void visit(AST::LoopStatement&) override;
     void visit(AST::IdentifierExpression&) override;
     void visit(AST::UnaryExpression&) override;
 
 private:
+    void rewrite(AST::Statement::List&);
+
     CallGraph& m_callGraph;
     unsigned m_currentStatementIndex { 0 };
     Vector<unsigned> m_indicesToDelete;
@@ -61,33 +66,33 @@ private:
 
 void PointerRewriter::run()
 {
-    AST::Visitor::visit(m_callGraph.ast());
+    Base::visit(m_callGraph.ast());
 }
 
-void PointerRewriter::visit(AST::CompoundStatement& statement)
+void PointerRewriter::rewrite(AST::Statement::List& statements)
 {
     auto indexScope = SetForScope(m_currentStatementIndex, 0);
     auto insertionScope = SetForScope(m_indicesToDelete, Vector<unsigned>());
     ContextScope blockScope(this);
 
-    for (auto& statement : statement.statements()) {
-        AST::Visitor::visit(statement);
+    for (auto& statement : statements) {
+        Base::visit(statement);
         ++m_currentStatementIndex;
     }
 
     for (int i = m_indicesToDelete.size() - 1; i >= 0; --i)
-        m_callGraph.ast().remove(statement.statements(), m_indicesToDelete[i]);
+        m_callGraph.ast().remove(statements, m_indicesToDelete[i]);
 }
 
-void PointerRewriter::visit(AST::ForStatement& statement)
+void PointerRewriter::visit(AST::CompoundStatement& statement)
 {
-    ContextScope forScope(this);
-    AST::Visitor::visit(statement);
+    ContextScope blockScope(this);
+    rewrite(statement.statements());
 }
 
 void PointerRewriter::visit(AST::VariableStatement& statement)
 {
-    AST::Visitor::visit(statement);
+    Base::visit(statement);
 
     auto& variable = statement.variable();
     auto* initializer = variable.maybeInitializer();
@@ -114,6 +119,17 @@ void PointerRewriter::visit(AST::PhonyAssignmentStatement& statement)
     m_indicesToDelete.append(m_currentStatementIndex);
 }
 
+void PointerRewriter::visit(AST::LoopStatement& statement)
+{
+    ContextScope loopScope(this);
+    rewrite(statement.body());
+
+    if (auto& continuing = statement.continuing()) {
+        ContextScope continuingScope(this);
+        rewrite(continuing->body);
+    }
+}
+
 void PointerRewriter::visit(AST::IdentifierExpression& identifier)
 {
     auto* variable = readVariable(identifier.identifier());
@@ -125,7 +141,7 @@ void PointerRewriter::visit(AST::IdentifierExpression& identifier)
 
 void PointerRewriter::visit(AST::UnaryExpression& unary)
 {
-    AST::Visitor::visit(unary);
+    Base::visit(unary);
 
     if (unary.operation() != AST::UnaryOperation::Dereference)
         return;
